[package]
authors = ['Unique Network <support@uniquenetwork.io>']
description = "Unique chain rpc"
edition = "2021"
license = 'GPLv3'
name = "unique-rpc"
version = "0.1.2"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
jsonrpsee = { workspace = true }
# pallet-contracts-rpc = { git = 'https://github.com/paritytech/substrate', branch = 'master' }
pallet-transaction-payment-rpc = { workspace = true }
sc-client-api = { workspace = true }
sc-network = { workspace = true }
sc-network-sync = { workspace = true }
sc-rpc = { workspace = true }
sc-rpc-api = { workspace = true }
sc-service = { workspace = true }
sc-transaction-pool = { workspace = true }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-blockchain = { workspace = true }
sp-runtime = { workspace = true }
substrate-frame-rpc-system = { workspace = true }

fc-db = { workspace = true }
fc-rpc = { workspace = true }
fc-rpc-core = { workspace = true }
fc-mapping-sync = { workspace = true }
fp-rpc = { workspace = true }
fp-storage = { workspace = true }

app-promotion-rpc = { workspace = true }
serde = { workspace = true }
uc-rpc = { workspace = true }
up-common = { workspace = true }
up-data-structs = { workspace = true }
up-pov-estimate-rpc = { workspace = true, default-features = true }
up-rpc = { workspace = true }
pallet-ethereum.workspace = true

[features]
default = []
pov-estimate = ['uc-rpc/pov-estimate']
std = []
