################################################################################
# Package

[package]
authors = ['Unique Network <support@uniquenetwork.io>']
description = 'Unique App Promotion Pallet'
edition = '2021'
homepage = 'https://unique.network'
license = 'GPLv3'
name = 'pallet-app-promotion'
repository = 'https://github.com/UniqueNetwork/unique-chain'
version = '0.2.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[features]
default = ['std']
runtime-benchmarks = [
	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system/runtime-benchmarks',
	# 'pallet-unique/runtime-benchmarks',
]
std = [
	'codec/std',
	'frame-benchmarking/std',
	'frame-support/std',
	'frame-system/std',
	'pallet-balances/std',
	'pallet-evm/std',
	'sp-core/std',
	'sp-runtime/std',
	'sp-std/std',

]
try-runtime = ["frame-support/try-runtime"]

[dependencies]
################################################################################
# Substrate Dependencies

# Note: `package = "parity-scale-codec"` must be supplied since the `Encode` macro searches for it.
codec = { workspace = true, package = "parity-scale-codec" }

scale-info = { workspace = true }

frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-balances = { workspace = true }
pallet-evm = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

################################################################################
# local dependencies

pallet-common = { workspace = true }
pallet-configuration = { workspace = true }
pallet-evm-contract-helpers = { workspace = true }
pallet-evm-migration = { workspace = true }
pallet-unique = { workspace = true }
up-data-structs = { workspace = true }

# [dev-dependencies]

################################################################################
# Other

log = { version = "0.4.16", default-features = false }
