################################################################################
# Package

[package]
authors = ['Unique Network <support@uniquenetwork.io>']
description = 'Unique App Promotion Pallet'
edition = '2021'
homepage = 'https://unique.network'
license = 'GPLv3'
name = 'pallet-app-promotion'
repository = 'https://github.com/UniqueNetwork/unique-chain'
version = '0.2.2'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[features]
default = ['std']
runtime-benchmarks = [
	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system/runtime-benchmarks',
	# 'pallet-unique/runtime-benchmarks',
]
std = [
	'frame-benchmarking/std',
	'frame-support/std',
	'frame-system/std',
	'pallet-evm/std',
	'parity-scale-codec/std',
	'sp-core/std',
	'sp-runtime/std',
	'sp-std/std',

]
try-runtime = ["frame-support/try-runtime"]

[dependencies]
################################################################################
# Substrate Dependencies

parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }

pallet-evm = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

################################################################################
# local dependencies

pallet-common = { workspace = true }
pallet-configuration = { workspace = true }
pallet-evm-contract-helpers = { workspace = true }
pallet-evm-migration = { workspace = true }
pallet-unique = { workspace = true }
up-data-structs = { workspace = true }

# [dev-dependencies]

################################################################################
# Other

log = { version = "0.4.20", default-features = false }
