[package]
edition = "2021"
license = "GPLv3"
name = "pallet-common"
version = "0.1.14"

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

bondrewd = { version = "0.1.14", features = ["derive"], default-features = false }
ethereum = { workspace = true }
evm-coder = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-evm = { workspace = true }
pallet-evm-coder-substrate = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-weights = { workspace = true }
up-data-structs = { workspace = true }
up-pov-estimate-rpc = { workspace = true }

[features]
default = []
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks", "up-data-structs/runtime-benchmarks"]
std = [
	"evm-coder/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-weights/std",
	"up-data-structs/std",
	"up-pov-estimate-rpc/std",
]
stubgen = ["evm-coder/stubgen", "up-data-structs/stubgen"]
tests = []
try-runtime = ["frame-support/try-runtime"]
