[package]
edition = "2021"
name = "pallet-configuration"
version = "0.1.3"

[dependencies]
fp-evm = { default-features = false, git = "https://github.com/uniquenetwork/frontier", branch = "unique-polkadot-v0.9.36" }
frame-benchmarking = { default-features = false, optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
parity-scale-codec = { version = "3.2.2", features = ["derive"], default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
smallvec = "1.6.1"
sp-arithmetic = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
xcm = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.36" }

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking"]
std = [
	"fp-evm/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"parity-scale-codec/std",
	"sp-arithmetic/std",
	"sp-core/std",
	"sp-std/std",
]
try-runtime = ["frame-support/try-runtime"]
