[package]
edition = "2021"
name = "pallet-configuration"
version = "0.2.0"

[dependencies]
# Note: `package = "parity-scale-codec"` must be supplied since the `Encode` macro searches for it.
codec = { workspace = true, package = "parity-scale-codec" }

fp-evm = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
scale-info = { workspace = true }
smallvec = { workspace = true }
sp-arithmetic = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-std = { workspace = true }
up-common = { workspace = true }
xcm = { workspace = true }

hex-literal = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking"]
std = [
	"codec/std",
	"fp-evm/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"sp-arithmetic/std",
	"sp-core/std",
	"sp-std/std",
]
try-runtime = ["frame-support/try-runtime"]
