[package]
edition = "2021"
name = "pallet-configuration"
version = "0.2.0"

[dependencies]
parity-scale-codec = { workspace = true }

fp-evm = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
scale-info = { workspace = true }
smallvec = { workspace = true }
sp-arithmetic = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
staging-xcm = { workspace = true }
up-common = { workspace = true }

hex-literal = { workspace = true }
log = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking"]
std = [
	"fp-evm/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"parity-scale-codec/std",
	"sp-arithmetic/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
try-runtime = ["frame-support/try-runtime"]
