[package]
name = "pallet-contract-helpers"
version = "0.1.0"
edition = "2018"

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.3.0'

[dependencies.up-sponsorship]
default-features = false
path = '../../primitives/sponsorship'
version = '0.1.0'

[dependencies]
frame-support = { default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
frame-system = { default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
pallet-contracts = { default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
sp-runtime = { default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
sp-std = { default-features = false, version = '4.0.0-dev', git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "pallet-contracts/std",
    "sp-runtime/std",
    "sp-std/std",
]
