[package]
edition = "2021"
license = "GPLv3"
name = "pallet-evm-coder-substrate"
version = "0.1.3"

[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = "3.2.2" }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }

evm-coder = { default-features = false, path = "../../crates/evm-coder" }
frame-benchmarking = { default-features = false, optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
pallet-evm = { default-features = false, git = "https://github.com/uniquenetwork/unique-frontier", branch = "unique-polkadot-v0.9.37" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
up-data-structs = { default-features = false, path = "../../primitives/data-structs" }

[features]
default = ["std"]
runtime-benchmarks = ['frame-benchmarking']
std = [
	"evm-coder/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
	"sp-core/std",
	"sp-std/std",
	'frame-benchmarking/std',
]
try-runtime = ["frame-support/try-runtime"]
