[package]
edition = "2021"
license = "GPLv3"
name = "pallet-evm-coder-substrate"
version = "0.1.3"

[dependencies]
# Note: `package = "parity-scale-codec"` must be supplied since the `Encode` macro searches for it.
codec = { workspace = true, package = "parity-scale-codec" }
scale-info = { workspace = true }

evm-coder = { workspace = true }
evm-core = { workspace = true }

frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-evm = { workspace = true }
sp-core = { workspace = true }
sp-std = { workspace = true }
up-data-structs = { workspace = true }

evm-coder-substrate-procedural = { path = "./procedural" }
spez = "0.1.1"

[features]
default = ["std"]
runtime-benchmarks = ['frame-benchmarking']
std = [
	"evm-coder/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
	"sp-core/std",
	"sp-std/std",
	'frame-benchmarking/std',
]
try-runtime = ["frame-support/try-runtime"]
